--- a/frontend/inventario/package.json
+++ b/frontend/inventario/package.json
@@ -18,6 +18,7 @@
     "vite": "^4.3.0"
   },
   "dependencies": {
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
