--- a/frontend/inventario/package.json
+++ b/frontend/inventario/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@zerodevx/svelte-toast": "^0.9.3",
     "bulma": "^0.9.4",
     "sass": "^1.53.0",
     "svelte": "^3.57.0",
